--- a/Nhom3/form.css
+++ b/Nhom3/form.css
@@ -1,64 +1,63 @@
 .index{
 	width: 100%;
-	height: 2000px;
+	height: 5000px;
 	background-color: skyblue;
-	display: flex;
+	display: block;
 }
 .index .box1{
 	width: 100%;
-	height: 800px;
+	height: 650px;
 	background-image: url(https://blog.spoongraphics.co.uk/wp-content/uploads/2012/cosmic-shards/dark-abstract-shards-design.jpg);
 	background-repeat: no-repeat;
 	background-size: 100% 800px;
 }
-.index .box1 .logo{
-	width: 90%;
-	height: 100px;
-	margin-left: 5%;
-	margin-top: 3rem;
-}
-.index .box1 .logo img{
+.index .box1 img{
 	float: left;
 	width: 100px;
-	height: 100px;	
+	height: 100px;
+	position: absolute;
+	left: 10%;
+	top: 5%;	
 }
-.index .box1 .logo h1{
+.index .box1 h1{
 	color: white;
 	font-size: 80px;
+	position: absolute;
+	left: 17%;
+	top: 0%;
 }
-.index .box1 .logo h2{
+.index .box1 h2{
 	display: block;
 	position: absolute;
-	left: 24.5%;
-	top: -0.5%;
+	left: 29%;
+	top: -1.7%;
 	font-size: 80px;
   	background: -webkit-linear-gradient(#00a9d4,#9e0258);
   	-webkit-background-clip: text;
   	-webkit-text-fill-color: transparent;
 }
-.index .box1 .logo .menu{
+.index .box1 .menu{
 	position: absolute;
-	left: 34.5%;
+	left: 41%;
 	top: 8.7%;
 	width: 60%;
 	height: 100px;
 }
-.index .box1 .logo .menu ul{
+.index .box1 .menu ul{
 	list-style: none;
-
 }
-.index .box1 .logo .menu ul li{
+.index .box1 .menu ul li{
 	float: left;
 	margin-left: 2rem;
 	margin-top: 1.5rem;
 }
-.index .box1 .logo .menu ul li a{
+.index .box1 .menu ul li a{
 	color: white;
 	font-size: 20px;
 	text-decoration: none;
 	font-family:  Helvetica, Arial, sans-serif;
 }
-.index .box1 .logo .menu ul li a:hover{
+.index .box1 .menu ul li a:hover{
 	background: -webkit-linear-gradient(#00a9d4,#9e0258);
   	-webkit-background-clip: text;
   	-webkit-text-fill-color: transparent;
@@ -66,28 +65,33 @@
 .index .box1 h3{
 	color: white;
 	font-size: 80px;
-	margin-left: 4rem;
+	position: absolute;
+	left: 5%;
+	top: 25%;
 }
 .index .box1 h4{
 	position: absolute;
-	left: 1%;
+	left: 5%;
 	top: 55%;
 	color: white;
-	margin-left: 4rem;
 	font-size: 40px;
 }
 .index .box1 .click1{
+	position: absolute;
+	left: 5%;
+	top: 70%;
 	text-decoration: none;
 	float: left;	
-	margin-left: 5%;
 	background-color: #06132e;
 	width: 270px;
 	height: 60px;
 	border-radius: 20px;
 }
 .index .box1 .click2{
+	position: absolute;
+	left: 30%;
+	top: 70%;
 	float: left;
-	margin-left: 5rem;
 	background-color:#06132e;
 	width: 270px;
 	height: 60px;
@@ -96,31 +100,160 @@
 }
 .index .box1 .click1 h5{
 	float: left;
-	margin-left: 1rem;
-	margin-top: 1rem;
-	font-size: 17px;
+	position: absolute;
+	left: 7%;
+	top: -30%;
+	font-size: 20px;
 	background: -webkit-linear-gradient(#00a9d4,#9e0258);
   	-webkit-background-clip: text;
   	-webkit-text-fill-color: transparent;
 }
 .index .box1 .click1 h6{
-	margin-left: 1rem;
-	margin-top: 1rem;
-	font-size: 17px;
+	position: absolute;
+	left: 50%;
+	top: -53%;
+	font-size: 20px;
 	color: white;
 }
 .index .box1 .click2 h5{
-	float: left;
-	margin-left: 1rem;
-	margin-top: 1rem;
-	font-size: 17px;
+	position: absolute;
+	left: 28%;
+	top: -25%;
+	font-size: 20px;
 	background: -webkit-linear-gradient(#00a9d4,#9e0258);
   	-webkit-background-clip: text;
   	-webkit-text-fill-color: transparent;
 }
 .index .box1 .click2 h6{
-	margin-left: 1rem;
-	margin-top: 1rem;
-	font-size: 17px;
+	position: absolute;
+	left: 50%;
+	top: -47%;
+	font-size: 20px;
 	color: white;
+}
+.index .box1 .click1:hover {
+	background: linear-gradient(#00a9d4,#9e0258);
+}
+.index .box1 .click2:hover {
+	background: linear-gradient(#00a9d4,#9e0258);
+}
+.index .box2{
+	width: 100%;
+	height: 450px;
+	background-color: white;
+}
+.index .box2 .menu-box2{
+	display: flex;
+	margin: 0 auto;
+	width: 80%;
+	height: 80px;
+	background-color: white;
+}
+.index .box2 .menu-box2 .left{
+	float: left;
+	width: 25%;
+	height: 100%;
+	background: linear-gradient(to right, #9e0258,#00a9d4);
+}
+.index .box2 .menu-box2 .left h1{
+	color: white;
+	font-size: 30px;
+	margin-left: 2.8rem;
+}
+.index .box2 .menu-box2 .mid{
+	float: left;
+	width: 45%;
+	height: 100%;
+}
+.index .box2 .menu-box2 .mid ul{
+	list-style: none;
+}
+.index .box2 .menu-box2 .mid ul li{
+	display: flex;
+	float: left;
+	width: 21.64%;
+	height: 80px;
+	background-color: white;
+	margin-top: -1rem;
+}
+.index .box2 .menu-box2 .mid ul li a{
+	color: black;
+	text-decoration: none;
+	font-size: 20px;
+	font-family: Helvetica, Arial, sans-serif;
+	margin-top: 1.5rem;
+	margin-left: 1.5rem;
+}
+.index .box2 .menu-box2 .right{
+	float: left;
+	width: 30%;
+	height: 100%;
+	background-color: yellow;
+}
+.index .box2 .menu-box2 .mid ul li:hover{
+	border-bottom: 3px solid #00a9d4;
+}
+.index .box2 .menu-box2 .mid ul li a:hover{
+	background: -webkit-linear-gradient(#00a9d4,#9e0258);
+  	-webkit-background-clip: text;
+  	-webkit-text-fill-color: transparent;
+}
+.index .box2 .menu-box2 .right{
+	width: 30%;
+	height: 100%;
+	background: linear-gradient(to right, #9e0258,#00a9d4);
+}
+.index .box2 .menu-box2 .right h1{
+	color: white;
+	margin-left: 1rem;
+}
+.index .box2 .index-box2{
+	width: 80%;
+	height: 320px;
+	margin: 0 auto;
+}
+.index .box2 .index-box2 .index-box2-box{
+	width: 20%;
+	height: 80%;
+	float: left;
+	margin-left: 1.8rem;
+	margin-top: 3%;
+	border: 1px solid #9e0258;
+}
+.index .box2 .index-box2 .index-box2-box .index-box2-box-content{
+	width: 100%;
+	height: 20%;
+	background-color: #9e0258;
+	display: flex;
+}
+.index .box2 .index-box2 .index-box2-box .index-box2-box-content p{
+	color: white;
+}
+.index .box2 .index-box2 .index-box2-box .index-box2-box-text p{
+	margin-left: 1rem;
+}
+.index .box2 .index-box2 .index-box2-box .index-box2-box-text .view{
+	width: 150px;
+	height: 30px;
+	border-radius: 10px;
+	background-color: #9e0258;
+	margin-left: 2.5rem;
+	margin-top: 1rem;
+	padding-top: 0.5rem;
+	color: white;
+	font-family: sans-serif;
+}
+.index .box2 .index-box2 .index-box2-box .index-box2-box-text .view:hover{
+	background: -webkit-linear-gradient(#00a9d4,#9e0258);
+  	-webkit-background-clip: text;
+  	-webkit-text-fill-color: transparent;
+}
+.index .box2 .index-box2 .ima{
+	position: absolute;
+	right: 10.45%;
+	top: 99.7%;
+	width: 23.7%;
+	height: 319px;
+	background: linear-gradient(to right, #9e0258,#00a9d4);
+	border-top:  1px solid gray;
 }
