--- a/Nhom3/form.css
+++ b/Nhom3/form.css
@@ -248,12 +248,113 @@
   	-webkit-background-clip: text;
   	-webkit-text-fill-color: transparent;
 }
-.index .box2 .index-box2 .ima{
-	position: absolute;
-	right: 10.45%;
-	top: 99.7%;
-	width: 23.7%;
-	height: 319px;
-	background: linear-gradient(to right, #9e0258,#00a9d4);
-	border-top:  1px solid gray;
+.index .box3 {
+	width: 100%;
+	height: 600px;
+}
+.index .box3 .Mon{
+	width: 80%;
+	height: 200px;
+	background: linear-gradient(to right, #CC3366, #000066);
+	margin: 0 auto;
+	padding: 1px;
+}
+.index .box3 .Mon h2{
+	text-align: center;
+	color: white;
+	font-size: 35px;
+	margin-bottom: 20px;
+}
+.index .box3 .Mon h4{
+	text-align: center;
+	color: white;
+	font-size: 28px;
+	margin-top: 20px;
+}
+.index .box3 .CLCC{
+	width: 200px;
+	height: 45px;
+	background: #000055;
+	border-radius: 20px;
+}
+.index .box3 a .CLCC{
+	text-align: center;
+	text-decoration: none;
+	font-family: fantasy;
+	color: white;
+	font-size: 16px;
+}
+.index .box3 .CLCC:hover
+{
+	background: linear-gradient(to right, #fc00ff, #00dbde);
+}
+.index .box3 .box a:hover .CLCC
+{
+	background: linear-gradient(to right, #fc00ff, #00dbde);
+	color: #993300;
+}
+.index .box3 .menu{
+	width: 80%;
+	height: 180px;
+	margin: 0 auto;
+}
+.index .box3 .menu h2{
+	text-align: center;
+	color: #000066;
+	font-size: 35px;
+	margin-bottom: 20px;
+}
+.index .box3 .menu li{
+	float: left;
+	display: block;
+	text-align: center;
+}
+.index .box3 .menu li:hover > a{
+	color: #000066;
+	border-left: 1px solid white;
+}
+.index .box3 .menu li a{
+	display: block;
+	text-decoration: none;
+	height: 40px;
+	line-height: 50px;
+	padding: 0 30px;
+	margin: 4px 0;
+	color: #6633FF;
+	font-weight: bold;
+}
+.index .box3 .menu ul li a {
+	text-decoration: none;
+	display: block;
+	width: 80%;
+	height: 100px;
+	line-height: 60px;
+	text-align: center;
+	font-size: 1.1rem;
+}
+.index .box3 .khung {
+	width: 80%;
+	height: 300px;
+	margin-left: 230px;
+}
+.index .box3 .khung .khungduoi{
+	float: left;
+	width: 16%;
+	height: 250px;
+	background: linear-gradient(to right, #CC3366, #000066);
+	margin-left: 30px;
+}
+.index .box3 .khung .khungduoi img{
+	float: left;
+	width: 100%;
+	height: 200px;
+
+}
+.index .box3 .khung .khungduoi p{
+	color: white;
+	margin-left: 9px;
+	font-size: 14px;
+}
+.index .box3 content a{
+	margin-left: 44%; 
 }
